--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,47 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+    text-align: center;
+    font-family: Arial, sans-serif;
+    display: flex;
+    flex-direction: column;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  
+  h1 {
+    font-size: 36px;
   }
-  to {
-    transform: rotate(360deg);
+  
+  .board {
+    display: grid;
+    grid-template-columns: repeat(3, 100px);
+    grid-gap: 3px;
+    margin: 20px auto;
   }
-}
+  
+  .cell {
+    width: 100px;
+    height: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 36px;
+    border: 2px solid #333;
+    cursor: pointer;
+    user-select: none;
+  }
+  
+  button {
+    font-size: 24px;
+    padding: 10px 20px;
+    margin: 10px auto;
+    background-color: #EE7600;
+    color: #fff;
+    border: none;
+    cursor: pointer;
+    max-width: 200px;
+    transition: all;
+    transition-duration: 300ms;
+  }
+  
+  button:hover {
+    background-color: #FFBC00;
+  }
+  
